<resources>
    <string name="app_name">CompMasterClientVersion</string>
    <string name="label_price_list_activity">Прайслист</string>
    <string name="label_new_order_activity">Новый заказ</string>

    <!--menu_draw-->
    <string name="menu_draw_profile">Личный кабинет</string>
    <string name="menu_draw_price_list">Прайслист</string>
    <string name="menu_draw_order_list">Мои заказы</string>
    <string name="menu_draw_new_order">Создать заказ</string>
    <string name="menu_draw_logout">Выйти</string>

    <!--menu_draw_header-->
    <string name="menu_draw_header_email">example_email@example.com</string>

    <!--main_activity-->
    <string name="toggle_open_main_a">open</string>
    <string name="toggle_close_main_a">close</string>
    <string name="tv_url_main_a">http://compmaster24.ru</string>
    <string name="tv_hours_work_main_a">8:00 – 24:00</string>
    <string name="tv_email_main_a">zabbarovdamir@mail.ru</string>
    <string name="tv_vk_main_a">vk.com/compmacter</string>
    <string name="tv_phone_main_a">24–65–74 , 75–76–03</string>
    <string name="tv_location_main_a">Ульяновск, Гагарина,28</string>
    <string name="tv_our_contact_main_a">Наши контакты</string>

    <!--login_activity-->
    <string name="tv_login_ok_login_a">Войти</string>
    <string name="hint_login_login_a">почта</string>
    <string name="hint_password_login_a">пароль</string>
    <string name="tv_register_login_a">Зарегистрироваться</string>
    <string name="error_not_contains_user_login_a">Логин/пароль введены некорректно,попробуйте еще раз</string>
    <string name="ch_remember_me_user_login_a">Запомнить меня</string>

    <!--register_activity-->
    <string name="tv_login_ok_register_a">Зарегистрироваться</string>
    <string name="hint_login_register_a">почта</string>
    <string name="hint_password_register_a">пароль</string>
    <string name="hint_repeat_password_register_a">повторите пароль</string>
    <string name="tv_login_register_a">Войти</string>
    <string name="error_validate_form_register_a">Некоректно заполнены поля!</string>
    <string name="error_contains_user__register_a">Пользователь с таким email сущесвует</string>

    <!--price_list_activity-->
    <string name="tv_header_rv_price_l_a">Прайслист</string>
    <!--order_list_activity-->
    <string name="tv_header_rv_order_l_a">Мои заказы</string>

    <!--rv_price_list_item-->
    <string name="tv_name_item_rv_price_list">Название вида ремонта</string>
    <string name="tv_hours_item_rv_price_list">24</string>
    <string name="tv_price_item_rv_price_list">1000</string>

    <!--new_order_activity-->
    <string name="hint_name_new_order_a">Имя</string>
    <string name="hint_phone_new_order_a">Номер телефона</string>
    <string name="hint_description_new_order_a">Описание проблемы</string>
    <string name="hint_address_new_order_a">Адрес</string>
    <string name="tv_choose_position_a">Выбрать позиции</string>
    <string name="tv_new_order_a">Добавить заказ</string>
    <string name="cb_remember_data_new_order_a">Сохранить</string>
    <string name="tv_total_sum_data_new_order_a">Стоимость заказа составила : %1$d руб.\n
                                                    Выбраны виды ремонта : %2$s </string>
    <string name="error_validation_new_order_a">Поля заполнены некорректно</string>
    <string name="error_fill_fields_new_order_a">Нужно заполнить все поля</string>

    <!--rv_order_list_item-->
    <string name="tv_number_item_rv_order_list">Номер заказа</string>
    <string name="tv_cost_item_rv_order_list">Стоимость</string>
    <string name="tv_date_item_rv_order_list">Дата</string>
    <string name="tv_status_order_rv_order_list">Статус</string>

    <!--order_activity-->
    <string name="tv_label_number_order_a">Номер заказа</string>
    <string name="tv_label_type_order_a">Виды ремонта</string>
    <string name="tv_label_employee_order_a">Работник</string>
    <string name="tv_label_status_order_a">Статус</string>
    <string name="tv_label_description_order_a">Описание</string>
    <string name="tv_label_time_executing_order_a">Время выполн</string>
    <string name="tv_label_time_creating_order_a">Время создан</string>
    <string name="tv_label_date_creating_order_a">Дата создания</string>
    <string name="tv_label_cost_order_a">Стоимость</string>
    <string name="cv_delete_order_order_a">Отменить</string>

    <!--profile_activity-->
    <string name="tv_name_profile_a">Ваше имя</string>
    <string name="tv_phobe_profile_a">Ваш номер</string>
    <string name="tv_email_profile_a">Ваш еmail</string>
    <string name="tv_address_profile_a">Ваш адрес</string>
    <string name="cv_save_profile_a">Сохранить</string>
</resources>
