<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/transparent">

    <android.support.v7.widget.CardView
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_number_item_rv_order_list"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:text="@string/tv_number_item_rv_order_list"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35000002" />

            <ImageView
                android:id="@+id/iv_ruble_item_rv_order_list"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_number_item_rv_order_list"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25"
                app:srcCompat="@drawable/ic_ruble" />

            <ImageView
                android:id="@+id/iv_time_item_rv_order_list"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_number_item_rv_order_list"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:id="@+id/tv_cost_item_rv_order_list"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:text="@string/tv_cost_item_rv_order_list"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_ruble_item_rv_order_list"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.225" />

            <TextView
                android:id="@+id/tv_date_item_rv_order_list"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:text="@string/tv_date_item_rv_order_list"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_time_item_rv_order_list"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/tv_status_order_rv_order_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_status_order_rv_order_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_number_item_rv_order_list" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>