<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiend_login_a"
    tools:context="com.androiddev.artemqa.compmasterclientversion.ui.RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_register_a"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_register_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hint_login_register_a" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_register_a"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_register_a">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password_register_a"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/hint_password_register_a" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/iv_email_login_a"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toStartOf="@+id/til_login_register_a"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/iv_password_register_a"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/til_password_register_a"
        app:layout_constraintTop_toBottomOf="@+id/iv_email_login_a"
        app:srcCompat="@drawable/ic_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_rep_password_login_a"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_register_a">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_rep_password_login_a"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/hint_repeat_password_register_a" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_button_register"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_rep_password_login_a">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_login_ok_register_a"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/iv_password_login_a"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/til_rep_password_login_a"
        app:layout_constraintTop_toBottomOf="@+id/iv_password_register_a"
        app:srcCompat="@drawable/ic_password" />

    <TextView
        android:id="@+id/tv_login_register_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_register_a"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_button_register" />

</android.support.constraint.ConstraintLayout>
